site/styles/_availability-tags.scss
s72-availability-label {
  .availability-state {
    @extend .d-flex;
    @extend .mb-2;
    @include body-1-style;
    line-height: 24px;

    &::before {
      @extend .fa;
      @extend .fa-warning;
      @extend .mr-1;
      color: var(--body-color);
      font-size: 24px;
      line-height: 24px;
    }
  }
}

.poster {
  s72-availability-status,
  s72-availability-label {
    position: absolute;
    z-index: 99;
  }

  s72-availability-label {
    @extend .w-100;
    bottom: 0;
    font-weight: $font-weight-normal;

    .availability-bg {
      @extend .px-p5;
      background-color: rgba(var(--body-bg-rgb), 0.7);
    }

    .availability-state {
      @extend .mb-0;
      line-height: 18px;
      &::before {
        content: none;
      }
    }
  }

  s72-availability-status .availability-bg,
  s72-plan-label {
    background-color: var(--primary);
    border-bottom-right-radius: $meta-item-border-radius;
    display: block;
    line-height: 20px;
    padding: 0 5px;
    text-align: center;
  }

  .availability-expired {
    @extend .d-none;
  }

  .availability-state {
    @extend .justify-content-center;
    color: var(--body-color-rgb);
    font-size: 12px;
    text-align: center;
  }
}

.poster .availability-state,
s72-plan-label {
  @extend .justify-content-center;
  color: var(--body-color-rgb);
  font-size: 12px;
  text-align: center;
}

s72-live-label {
  .live-label {
    backdrop-filter: blur(16px);
    border-radius: 100px;
    color: var(--body-color);
    font-size: 12px;
    line-height: 30px;
    padding: 0 12px;
    white-space: nowrap;
    width: fit-content;

    &.is-live {
      background-color: var(--live-label-live-background-color);
    }

    .s72-icon-live {
      @extend .fa-circle;
      @extend .s72-icon;

      margin-right: 8px;
      margin-top: -1.5px;
    }
  }
}

